fixed mobile overlapping

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @layer base {
   body {
-    @apply font-[Quicksand];
+    font-family: Quicksand;
   }
   li {
     @apply px-4;
